force-app/main/default/objects/Camping_Item__c/fields/Longitude1__c.field-meta.xml
<CustomField>
    <fullName>Longitude1__c</fullName>
    <label>Longitude1</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>