force-app/main/default/objects/Camping_Item__c/fields/Longitude3__c.field-meta.xml
<CustomField>
    <fullName>Longitude3__c</fullName>
    <label>Longitude3</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>