force-app/main/default/objects/Camping_Item__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <label>Longitude</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>